2006-02-06  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection_base.hxx:
  - Compile fix for change in subtransaction (Bart Samwel)
 include/pqxx/pipeline.hxx:
  - Previous Visual C++ fix broke compilers without "limits" header
 tools/maketestvcmak.pl, win32/common:
  - More little fixes by Bart "who was that again?" Samwel
 tools/preprelease:
  - Fix md5sum generation
 win32/common, win32/common-sample, win32/INSTALL.txt:
  - Updated with help from Alexandre Hanft
  - No longer edit win32/common; copy from common-sample first (Bart Samwel)
2006-02-05  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/*:
  - Disable pointless Visual C++ warnings in headers (Bart Samwel)
 include/pqxx/compiler-internal-post.hxx,
 include/pqxx/compiler-internal-pre.hxx:
  - New
  - Wrap libpqxx headers in temporary warning suppression on Visual C++
  - Designed by Bart Samwel
 include/pqxx/prepared_statement.hxx, src/prepared_statement.cxx:
  - Fixed bug that was hidden with some string implementations (Bart Samwel)
 include/pqxx/util.hxx:
  - Work around yet another pointless Visual C++ warning (Bart Samwel)
 tools/maketestvcmak.pl:
  - Removed obsolete linker function /pdbtype (Bart Samwel)
  - Make ALL the default target (Bart Samwel)
 tools/makevcmak.pl:
  - Copy libpq libraries into our own directories (Bart Samwel)
 tools/preprelease:
  - Check for matching compiler-internal-pre/post.hxx headers
 win32/common:
  - Single definition for use in all relevant paths (Bart Samwel)
2006-02-04  Jeroen T. Vermeulen <jtv@xs4all.nl>
 config/sample-headers/libpq/8.1/config-internal-libpq.h
  - New
  - Adds PQserverVersion()--thanks Bart Samwel
  - Adds PQprepare()
 include/pqxx/compiler-public.hxx:
  - Use debug build of libpq when building debug libpqxx, (Bart Samwel)
 include/pqxx/basic_connection.hxx, include/pqxx/connection_base.hxx,
 include/pqxx/connectionpolicy.hxx, src/connection_base.cxx,
 src/connection.cxx: